<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.detail.BookDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <FrameLayout
            android:id="@+id/coverContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_large_height"
            android:background="@drawable/bg_cover">

            <ImageView
                android:layout_width="@dimen/cover_large_icon"
                android:layout_height="@dimen/cover_large_icon"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_book" />
        </FrameLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space_l" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            tools:text="O Hobbit" />

        <TextView
            android:id="@+id/bookSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:visibility="gone"
            tools:text="ou Lá e de Volta Outra Vez"
            tools:visibility="visible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space_xs" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?attr/colorPrimary"
            tools:text="J. R. R. Tolkien" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/section_spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <include
                android:id="@+id/infoYear"
                layout="@layout/view_info_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <include
                android:id="@+id/infoPages"
                layout="@layout/view_info_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <include
                android:id="@+id/infoPublisher"
                layout="@layout/view_info_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/section_spacing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:text="@string/label_rating"
            android:textAppearance="@style/TextAppearance.MinhaEstante.SectionTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_s"
                android:importantForAccessibility="no"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="?attr/colorOutlineVariant"
                android:progressTint="?attr/colorPrimary"
                android:secondaryProgressTint="?attr/colorOutlineVariant"
                android:stepSize="0.5"
                tools:rating="4.5" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                tools:text="4,5 de 5" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/section_spacing" />

        <TextView
            android:id="@+id/genresLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:text="@string/label_genres"
            android:textAppearance="@style/TextAppearance.MinhaEstante.SectionTitle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genreGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space_l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:text="@string/label_synopsis"
            android:textAppearance="@style/TextAppearance.MinhaEstante.SectionTitle" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:lineSpacingMultiplier="1.2"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            tools:text="Bilbo Bolseiro deixa o conforto de sua toca para acompanhar um grupo de anões." />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space_xl" />

        <com.thales.minhaestante.ui.components.ReadingStatusSelectorView
            android:id="@+id/statusSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
